--- a/with context.ipynb
+++ b/with context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -36,23 +36,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "3772\n",
-      "2779\n",
+      "2330\n",
       "Generating time step features...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_with_time_feat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [12]\u001B[0m, in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     26\u001B[0m df2 \u001B[38;5;241m=\u001B[39m df\u001B[38;5;241m.\u001B[39mgroupby(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtime_id\u001B[39m\u001B[38;5;124m'\u001B[39m)\u001B[38;5;241m.\u001B[39mapply(gen_time_feats)\n\u001B[0;32m     27\u001B[0m \u001B[38;5;66;03m# df_with_time_feat.drop([''], axis=1, inplace=True)\u001B[39;00m\n\u001B[1;32m---> 28\u001B[0m \u001B[38;5;28;01massert\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(\u001B[43mdf_with_time_feat\u001B[49m\u001B[38;5;241m.\u001B[39mcolumns) \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m300\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m3\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m2\u001B[39m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'df_with_time_feat' is not defined"
      ]
     }
    ],
    "source": [
     "# Load data\n",
-    "df = pd.read_parquet('E:/train_low_mem.parquet')\n",
-    "df = df.head(500000)\n",
-    "# df = pd.read_csv('kaggle/input/ubiquant-market-prediction/train.csv', engine='pyarrow')\n",
+    "# df = pd.read_parquet('E:/train_low_mem.parquet')\n",
+    "# df = df.head(500000)\n",
+    "df = pd.read_csv('kaggle/input/ubiquant-market-prediction/train.csv', engine='pyarrow')\n",
     "df.drop(['row_id'], inplace=True, axis=1)\n",
     "investment_id = df[\"investment_id\"]\n",
     "y = df.pop(\"target\")\n",
@@ -67,15 +78,14 @@
     "\n",
     "def gen_time_feats(df):\n",
     "    feats = df.loc[:, 'f_0':'f_299']\n",
-    "    for col in feats.columns:\n",
-    "        df[f'{col}_avg'] = np.mean(feats[col].values)\n",
-    "        df[f'{col}_std'] = np.std(feats[col].values)\n",
-    "    return df\n",
-    "\n",
+    "    feats -= feats.mean()\n",
+    "    return pd.concat([df[['time_id', 'investment_id']], feats], axis=1)\n",
+    "df2 = df.groupby('time_id').apply(gen_time_feats)\n",
     "print('Generating time step features...')\n",
-    "df_with_time_feat = df.filter(regex='f_\\d+').groupby(df['time_id']).agg(['mean', 'std'])\n",
-    "df_with_time_feat.columns = df_with_time_feat.columns.to_flat_index().str.join('_')\n",
-    "df_with_time_feat = df.set_index('time_id').join(df_with_time_feat).sort_index(axis=1).reset_index()\n",
+    "# df_with_time_feat = df.filter(regex='f_\\d+').groupby(df['time_id']).agg(['mean', 'std'])\n",
+    "# df_with_time_feat.columns = df_with_time_feat.columns.to_flat_index().str.join('_')\n",
+    "# df_with_time_feat = df.set_index('time_id').join(df_with_time_feat).sort_index(axis=1).reset_index()\n",
+    "\n",
     "# df_with_time_feat.drop([''], axis=1, inplace=True)\n",
     "assert len(df_with_time_feat.columns) == 300 * 3 + 2"
    ],
