Update with context

--- a/with context.ipynb
+++ b/with context.ipynb
@@ -27,8 +27,6 @@
     "from tensorflow.keras import mixed_precision\n",
     "from tensorflow.keras.utils import plot_model\n",
     "import tensorflow_probability as tfp\n",
-    "from warnings import simplefilter\n",
-    "simplefilter(action=\"ignore\", category=pd.errors.PerformanceWarning)\n",
     "\n",
     "mixed_precision.set_global_policy('mixed_float16')\n",
     "print(tf.__version__)"
@@ -36,37 +34,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "3772\n",
-      "2330\n",
-      "Generating time step features...\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'df_with_time_feat' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [12]\u001B[0m, in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     26\u001B[0m df2 \u001B[38;5;241m=\u001B[39m df\u001B[38;5;241m.\u001B[39mgroupby(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtime_id\u001B[39m\u001B[38;5;124m'\u001B[39m)\u001B[38;5;241m.\u001B[39mapply(gen_time_feats)\n\u001B[0;32m     27\u001B[0m \u001B[38;5;66;03m# df_with_time_feat.drop([''], axis=1, inplace=True)\u001B[39;00m\n\u001B[1;32m---> 28\u001B[0m \u001B[38;5;28;01massert\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(\u001B[43mdf_with_time_feat\u001B[49m\u001B[38;5;241m.\u001B[39mcolumns) \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m300\u001B[39m \u001B[38;5;241m*\u001B[39m \u001B[38;5;241m3\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m2\u001B[39m\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'df_with_time_feat' is not defined"
+      "2301\n"
      ]
     }
    ],
    "source": [
     "# Load data\n",
     "# df = pd.read_parquet('E:/train_low_mem.parquet')\n",
-    "# df = df.head(500000)\n",
-    "df = pd.read_csv('kaggle/input/ubiquant-market-prediction/train.csv', engine='pyarrow')\n",
+    "df = pd.read_csv('kaggle/input/ubiquant-market-prediction/train.csv', engine='c', nrows=5000)\n",
     "df.drop(['row_id'], inplace=True, axis=1)\n",
-    "investment_id = df[\"investment_id\"]\n",
-    "y = df.pop(\"target\")\n",
+    "investment_id = df['investment_id']\n",
+    "df = df.groupby(['time_id'])\n",
+    "x, x_id, y = [], [], []\n",
+    "for timestep in df:\n",
+    "    timestep = timestep[1]  # remove pd added index tuple\n",
+    "    x.append(timestep.loc[:, 'f_0':'f_299'].to_numpy())\n",
+    "    x_id.append(timestep['investment_id'].to_numpy())\n",
+    "    y.append(timestep['target'].to_numpy())\n",
     "\n",
     "investment_ids = list(investment_id.unique())\n",
     "investment_id_lookup_layer = IntegerLookup(oov_token=-1, output_mode='int')\n",
@@ -75,19 +66,7 @@
     "vocab_size = investment_id_lookup_layer.vocabulary_size()\n",
     "print(max(investment_ids))\n",
     "print(vocab_size)\n",
-    "\n",
-    "def gen_time_feats(df):\n",
-    "    feats = df.loc[:, 'f_0':'f_299']\n",
-    "    feats -= feats.mean()\n",
-    "    return pd.concat([df[['time_id', 'investment_id']], feats], axis=1)\n",
-    "df2 = df.groupby('time_id').apply(gen_time_feats)\n",
-    "print('Generating time step features...')\n",
-    "# df_with_time_feat = df.filter(regex='f_\\d+').groupby(df['time_id']).agg(['mean', 'std'])\n",
-    "# df_with_time_feat.columns = df_with_time_feat.columns.to_flat_index().str.join('_')\n",
-    "# df_with_time_feat = df.set_index('time_id').join(df_with_time_feat).sort_index(axis=1).reset_index()\n",
-    "\n",
-    "# df_with_time_feat.drop([''], axis=1, inplace=True)\n",
-    "assert len(df_with_time_feat.columns) == 300 * 3 + 2"
+    "assert len(x) == len(y)"
    ],
    "metadata": {
     "collapsed": false,
@@ -98,20 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "def preprocess(x, y):\n",
-    "    # TODO\n",
-    "    return x, y\n",
-    "\n",
-    "def make_dataset(feature, investment_id, y, batch_size=2048, mode='train'):\n",
-    "    ds = tf.data.Dataset.from_tensor_slices(((investment_id, feature), y))\n",
-    "    ds = ds.map(preprocess)\n",
-    "    if mode == \"train\": ds = ds.shuffle(8192, seed=69)  # only shuffle when training\n",
-    "    ds = ds.batch(batch_size).cache().prefetch(tf.data.experimental.AUTOTUNE)\n",
-    "    return ds\n",
-    "\n",
+    "def preprocess(x, x_id, y):\n",
+    "    global x_time, width, num_remaining, remaining_slice, rows_to_fill, padded_remaining\n",
+    "    x_time = [tf.convert_to_tensor(s, dtype=tf.float16) for s in x]\n",
+    "    width = x_time[0].shape[1]  # should be 300 (no of features)\n",
+    "    num_remaining = [s.shape[0]%width for s in x_time]  # remaining rows less than 300\n",
+    "    remaining_slice = [x_time[i][-num_remaining[i]:] for i in range(len(x_time))]\n",
+    "    rows_to_fill = [width-r for r in num_remaining]\n",
+    "    padded_remaining = [tf.concat([remaining_slice[i], tf.cast(tf.zeros([rows_to_fill[i], width]), tf.float16)], axis=0) for i in range(len(x_time))]\n",
+    "    x_time = [tf.concat([x_time[i], padded_remaining[i]], axis=0) for i in range(len(x_time))]  # concat padded remaining rows to already split rows\n",
+    "    x_time = [tf.reshape(s[:-(s.shape[0]%width)], (-1, width, width)) for s in x_time]  # reshape automatically split rows\n",
+    "    x_time = [[x_time] * len(s) for s in x]\n",
+    "    return (x, x_id, x_time), y  # x_time is a list of same images of n x 300 x 300, same across a time step\n",
     "\n",
     "# Pearson correlation coefficient loss and metrics\n",
     "def pearson_corr(y_true, y_pred, axis=-1):\n",
@@ -129,13 +109,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing dataset\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Preprocessing dataset')\n",
+    "ds = preprocess(x, x_id, y)\n",
+    "\n",
+    "# def make_dataset(ds, batch_size=64, mode='train'):\n",
+    "#     single_x = []\n",
+    "#     single_x_id = []\n",
+    "#     single_y = []\n",
+    "#     single_x_time = []\n",
+    "#     x = ds[0][0]\n",
+    "#     x_id = ds[0][1]\n",
+    "#     x_time = ds[0][2]\n",
+    "#     y = ds[1]\n",
+    "#     print('Iterating through dataset')\n",
+    "#     for time_id in range(len(x)):\n",
+    "#         for sample in x[time_id]:\n",
+    "#             single_x.append(sample)\n",
+    "#         for sample in x_id[time_id]:\n",
+    "#             single_x_id.append(sample)\n",
+    "#         for sample in y[time_id]:\n",
+    "#             single_y.append(sample)\n",
+    "#         single_x_time += [x_time[time_id]] * len(x[time_id])\n",
+    "#     return (single_x, single_x_id, single_x_time), single_y\n",
+    "\n",
+    "print('Done')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(len(ds))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "outputs": [],
    "source": [
-    "# Model\n",
     "def build_model():\n",
-    "    investment_id_inputs = Input((1, ), name='inv_id_in', dtype=tf.uint16)\n",
-    "    features_inputs = Input((900, ), name='feature_in', dtype=tf.float16)\n",
+    "    investment_id_inputs = Input((1, ), name='inv_id_in', dtype=tf.uint8)\n",
+    "    features_inputs = Input((300,), name='feature_in', dtype=tf.float16)\n",
+    "    time_context_inputs = Input((None, 300, 300), name='context_in', dtype=tf.float16)\n",
     "\n",
     "    investment_id_x = investment_id_lookup_layer(investment_id_inputs)\n",
     "    investment_id_x = Embedding(vocab_size, 64, input_length=1)(investment_id_x)\n",
@@ -148,14 +188,17 @@
     "    # investment_id_x = Dropout(0.2)(investment_id_x)\n",
     "\n",
     "    feature_x = GaussianNoise(0.01)(features_inputs)\n",
-    "    feature_x = Dense(512, activation='swish')(feature_x)\n",
+    "    feature_x = Dense(256, activation='swish')(feature_x)\n",
     "    # feature_x = Dropout(0.2)(feature_x)\n",
     "    feature_x = Dense(256, activation='swish')(feature_x)\n",
     "    # feature_x = Dropout(0.2)(feature_x)\n",
     "    feature_x = Dense(256, activation='swish')(feature_x)\n",
     "    # feature_x = Dropout(0.2)(feature_x)\n",
     "\n",
-    "    x = Concatenate(axis=1)([investment_id_x, feature_x])\n",
+    "    time_context_x = Conv2D(128, (3, 3))(time_context_inputs)\n",
+    "    time_context_x = Flatten()(time_context_x)\n",
+    "\n",
+    "    x = Concatenate(axis=1)([investment_id_x, feature_x, time_context_x])\n",
     "    x = Dense(512, activation='swish', kernel_regularizer=\"l2\")(x)\n",
     "    # x = LayerNormalization()(x)\n",
     "    x = Dropout(0.2)(x)\n",
@@ -168,7 +211,7 @@
     "    xOut = Dense(1, name='output')(x)\n",
     "\n",
     "    model = Model(inputs=[investment_id_inputs, features_inputs], outputs=[xOut])\n",
-    "    model.compile(loss='mse', optimizer=tf.keras.optimizers.Adam(learning_rate=1e-3), metrics=[pearson_corr, 'mse'])\n",
+    "    model.compile(loss='mse', optimizer=tf.keras.optimizers.Adam(learning_rate=7e-4), metrics=[pearson_corr, 'mse'])\n",
     "    return model"
    ],
    "metadata": {
@@ -315,8 +358,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
