add preprocess and post processing scaling

--- a/billy parquet no embedding.ipynb
+++ b/billy parquet no embedding.ipynb
@@ -2,16 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Program Files\\Python39\\lib\\site-packages\\tensorflow_addons\\utils\\ensure_tf_install.py:53: UserWarning: Tensorflow Addons supports using Python ops for all Tensorflow versions above or equal to 2.5.0 and strictly below 2.8.0 (nightly versions are not supported). \n",
+      " The versions of TensorFlow you are currently using is 2.8.0 and is not supported. \n",
+      "Some things might work, some things might not.\n",
+      "If you were to encounter a bug, do not file an issue.\n",
+      "If you want to make sure you're using a tested and supported configuration, either change the TensorFlow version or the TensorFlow Addons's version. \n",
+      "You can find the compatibility matrix in TensorFlow Addon's readme:\n",
+      "https://github.com/tensorflow/addons\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.6.3\n"
+      "2.8.0\n"
      ]
     }
    ],
@@ -57,8 +71,12 @@
    "outputs": [],
    "source": [
     "def preprocess(x, y):\n",
-    "    # TODO\n",
-    "    return x, y\n",
+    "    # flatten and normalize\n",
+    "    return x, tf.math.sign(y) * tf.math.log(1+tf.math.log(1+tf.math.abs(y)))\n",
+    "\n",
+    "def post_process(y):\n",
+    "    y = tf.math.sign(y) * (tf.math.expm1(tf.math.expm1(tf.math.sign(y) * y)))\n",
+    "    return y.numpy()\n",
     "\n",
     "def make_dataset(feature, y, batch_size=10240, mode='train'):\n",
     "    ds = tf.data.Dataset.from_tensor_slices((feature, y))\n",
@@ -1525,7 +1543,7 @@
     "    history = model.fit(train_ds, epochs=50, validation_data=valid_ds, callbacks=callbacks)\n",
     "    models.append(load_model(f\"model_{index}\", custom_objects={'pearson_corr': pearson_corr, 'pearson_corr_loss': pearson_corr_loss}))\n",
     "\n",
-    "    pearson_score = scipy.stats.pearsonr(model.predict(valid_ds).ravel(), y_val.values)[0]\n",
+    "    pearson_score = scipy.stats.pearsonr(post_process(model.predict(valid_ds)), y_val.values)[0]\n",
     "    print('Pearson:', pearson_score)\n",
     "    del X_train\n",
     "    del X_val\n",
@@ -1589,6 +1607,10 @@
     "def preprocess_test(feature):\n",
     "    return feature, 0\n",
     "\n",
+    "def post_process(y):\n",
+    "    y = tf.math.sign(y) * (tf.math.expm1(tf.math.expm1(tf.math.sign(y) * y)))\n",
+    "    return y.numpy()\n",
+    "\n",
     "def make_test_dataset(feature, batch_size=10240):\n",
     "    ds = tf.data.Dataset.from_tensor_slices(feature)\n",
     "    ds = ds.map(preprocess_test)\n",
@@ -1600,7 +1622,7 @@
     "    y_preds = []\n",
     "    for model in models:\n",
     "        y_pred = model.predict(ds)\n",
-    "        y_preds.append(y_pred)\n",
+    "        y_preds.append(post_process(y_pred))\n",
     "    return np.mean(y_preds, axis=0)  # ensemble\n",
     "\n",
     "models = [load_model(f\"model_{index}\", custom_objects={'pearson_corr': pearson_corr, 'pearson_corr_loss': pearson_corr_loss}) for index in range(6)]\n",
