--- a/billy parquet no lstm with embedding.ipynb
+++ b/billy parquet no lstm with embedding.ipynb
@@ -74,8 +74,12 @@
    "outputs": [],
    "source": [
     "def preprocess(x, y):\n",
-    "    # TODO\n",
-    "    return x, y\n",
+    "    # flatten and normalize\n",
+    "    return x, tf.math.sign(y) * tf.math.log(1+tf.math.log(1+tf.math.abs(y)))\n",
+    "\n",
+    "def post_process(y):\n",
+    "    y = tf.math.sign(y) * (tf.math.expm1(tf.math.expm1(tf.math.sign(y) * y)))\n",
+    "    return y.numpy()\n",
     "\n",
     "def make_dataset(feature, investment_id, y, batch_size=8192, mode='train'):\n",
     "    ds = tf.data.Dataset.from_tensor_slices(((investment_id, feature), y))\n",
@@ -1102,7 +1106,7 @@
     "    history = model.fit(train_ds, epochs=50, validation_data=valid_ds, callbacks=callbacks)\n",
     "    models.append(load_model(f\"model_{index}\", custom_objects={'pearson_corr': pearson_corr, 'pearson_corr_loss': pearson_corr_loss, 'Addons>Lookahead': opt}))\n",
     "\n",
-    "    pearson_score = scipy.stats.pearsonr(model.predict(valid_ds).ravel(), y_val.values)[0]\n",
+    "    pearson_score = scipy.stats.pearsonr(post_process(model.predict(valid_ds)), y_val.values)[0]\n",
     "    print('Pearson:', pearson_score)\n",
     "    del investment_id_train\n",
     "    del investment_id_val\n",
@@ -1191,6 +1195,10 @@
     "def preprocess_test(investment_id, feature):\n",
     "    return (investment_id, feature), 0\n",
     "\n",
+    "def post_process(y):\n",
+    "    y = tf.math.sign(y) * (tf.math.expm1(tf.math.expm1(tf.math.sign(y) * y)))\n",
+    "    return y.numpy()\n",
+    "\n",
     "def make_test_dataset(feature, investment_id, batch_size=8192):\n",
     "    ds = tf.data.Dataset.from_tensor_slices(((investment_id, feature)))\n",
     "    ds = ds.map(preprocess_test)\n",
@@ -1202,7 +1210,7 @@
     "    y_preds = []\n",
     "    for model in models:\n",
     "        y_pred = model.predict(ds)\n",
-    "        y_preds.append(y_pred)\n",
+    "        y_preds.append(post_process(y_pred))\n",
     "    return np.mean(y_preds, axis=0)  # ensemble\n",
     "\n",
     "models = [load_model(f\"model_{index}\", custom_objects={'pearson_corr': pearson_corr, 'pearson_corr_loss': pearson_corr_loss}) for index in range(6)]\n",
