use tf.math.log1p instead

--- a/billy parquet no embedding.ipynb
+++ b/billy parquet no embedding.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "def preprocess(x, y):\n",
     "    # flatten and normalize\n",
-    "    return x, tf.math.sign(y) * tf.math.log(1+tf.math.log(1+tf.math.abs(y)))\n",
+    "    return x, tf.math.sign(y) * tf.math.log1p(tf.math.log1p(tf.math.abs(y)))\n",
     "\n",
     "def post_process(y):\n",
     "    y = tf.math.sign(y) * (tf.math.expm1(tf.math.expm1(tf.math.sign(y) * y)))\n",
