Update no embedding and results

--- a/billy parquet no lstm with embedding.ipynb
+++ b/billy parquet no lstm with embedding.ipynb
@@ -78,6 +78,7 @@
     "    return x, tf.math.sign(y) * tf.math.log1p(tf.math.log1p(tf.math.abs(y)))\n",
     "\n",
     "def post_process(y):\n",
+    "    y = list(map(np.ndarray.item, list(y)))\n",
     "    y = tf.math.sign(y) * (tf.math.expm1(tf.math.expm1(tf.math.sign(y) * y)))\n",
     "    return y.numpy()\n",
     "\n",
@@ -1196,6 +1197,7 @@
     "    return (investment_id, feature), 0\n",
     "\n",
     "def post_process(y):\n",
+    "    y = list(map(np.ndarray.item, list(y)))\n",
     "    y = tf.math.sign(y) * (tf.math.expm1(tf.math.expm1(tf.math.sign(y) * y)))\n",
     "    return y.numpy()\n",
     "\n",
